objects/OSM_Accounts_Coupon_Details__c.object
<CustomObject>
    <fields>
        <fullName>Coupon_Code__c</fullName>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OSM Accounts Coupon Details</relationshipLabel>
        <relationshipName>OSM_Accounts_Coupon_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Generated__c</fullName>
        <label>Date Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Coupon_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Coupon Used</label>
        <type>Checkbox</type>
    </fields>
    <label>OSM Accounts Coupon Details</label>
    <nameField>
        <label>OSM Accounts Coupon Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSM Accounts Coupon Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>